# Backend-alles

./: .gitignore  main.py  pyproject.toml  requirement.txt
src/api/: deps.py
src/api/routes/: auth.py  evaluate.py  interview_analyse.py  requisition.py  users.py
src/core/: config.py  security.py
src/db/: init_db.py
src/middleware/: auth.py  logging.py
src/models/: Requisition.py  candidateprofile.py  evaluations.py  interview.py  user.py
src/schemas/: candidateSchema.py  evaluation.py  file.py  requisition.py  token.py  user.py
src/services/: db_services.py  livekit.py  process_evalution.py  process_file.py  process_interview.py  read_prompt.py  token_service.py  websocket.py
src/utils/: PROMPT  email_utils.py  file_handler.py  keymanager.py  mail_content.py
src/worker/: conn.py
